--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="box">
 
-        <img src="icon.png">
+        <img src="icon.png"alt="image not found">
         <div class="page">
             <div class="header">
                 <a id="login" class="active" href="#login">login</a>
